--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
+    "mockjs": "^1.1.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
