--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/proxy": "^1.3.3",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-lodash": "^3.3.4",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "lodash-webpack-plugin": "^0.11.5",
