--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
+    "marked": "^0.7.0",
+    "mavon-editor": "^2.7.7",
     "mockjs": "^1.1.0",
+    "moment": "^2.24.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
@@ -32,6 +35,9 @@
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.13.0",
     "nodemon": "^1.18.9",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.2"
   }
 }
